--- a/src/assets/styles/WalletForm.css
+++ b/src/assets/styles/WalletForm.css
@@ -1,29 +1,22 @@
-.form-section {
+.form-line {
   width: 80%;
   height: 134px;
   background-color: rgb(235, 239, 244);
   border-radius: 0px;
   margin: auto;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  align-items: center;
   padding: 0 100px;
   box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
-
-}
-
-.form-line {
+  color: #003BE5;
   font-weight: 700;
+  flex-wrap: wrap;
   font-size: 14px;
   line-height: 14px;
-  display: flex;
-  align-items: center;
-  color: #003BE5;
 }
 
 .form-section label {
   display: flex;
-  flex-grow: 1;
   align-items: center;
 }
 
@@ -36,6 +29,14 @@
   background-color: rgb(235, 239, 244);
   color: #003BE5;
   padding: 0 5px;
+}
+
+.description-label {
+  flex-grow: 100;
+}
+
+.tag-label, .value-label, .currency-label, .method-label {
+  flex-grow: 1;
 }
 
 .form-section label span {
@@ -51,4 +52,32 @@ select::-webkit-scrollbar {
   width: 10px;
   height: 10px;
   background-color: blueviolet;
+}
+
+.add-expense-section {
+  background-color: white;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
+  border-radius: 0 0 10px 10px;
+}
+
+.add-expense-button {
+  width: 330px;
+  height: 40px;
+  left: 475px;
+  top: 318px;
+  background: #2FC18C;
+  border: 1px solid #2FC18C;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  color: #FFFFFF;
+  font-family: Epilogue, sans-serif;
 }
