--- a/src/assets/styles/WalletForm.css
+++ b/src/assets/styles/WalletForm.css
@@ -1,4 +1,4 @@
-.form-line {
+.input-section {
   width: 80%;
   height: 134px;
   background-color: rgb(235, 239, 244);
@@ -6,6 +6,7 @@
   margin: auto;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 100px;
   box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
   color: #003BE5;
@@ -32,10 +33,12 @@
 }
 
 .description-label {
-  flex-grow: 100;
+  flex-basis: 60%;
+  flex-grow: 1;
 }
 
 .tag-label, .value-label, .currency-label, .method-label {
+  flex-basis: 25%;
   flex-grow: 1;
 }
 
