--- a/src/assets/styles/WalletForm.css
+++ b/src/assets/styles/WalletForm.css
@@ -1,34 +1,34 @@
 .input-section {
-  width: 80%;
-  height: 134px;
-  background-color: rgb(235, 239, 244);
-  border-radius: 0px;
-  margin: auto;
-  display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 100px;
+  background-color: rgb(235, 239, 244);
+  border-radius: 0;
   box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
-  color: #003BE5;
-  font-weight: 700;
+  color: #003be5;
+  display: flex;
   flex-wrap: wrap;
   font-size: 14px;
+  font-weight: 700;
+  height: 134px;
+  justify-content: space-between;
   line-height: 14px;
+  margin: auto;
+  padding: 0 100px;
+  width: 80%;
 }
 
 .form-section label {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
 .input-element {
+  background-color: rgb(235, 239, 244);
+  border: 1px solid #003be5;
+  border-radius: 5px;
+  color: #003be5;
   display: flex;
   flex-grow: 1;
   height: 30px;
-  border: 1px solid #003BE5;
-  border-radius: 5px;
-  background-color: rgb(235, 239, 244);
-  color: #003BE5;
   padding: 0 5px;
 }
 
@@ -37,7 +37,7 @@
   flex-grow: 1;
 }
 
-.tag-label, .value-label, .currency-label, .method-label {
+.tag-label , .value-label , .currency-label , .method-label {
   flex-basis: 25%;
   flex-grow: 1;
 }
@@ -51,36 +51,30 @@ select {
   height: 30px;
 }
 
-select::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  background-color: blueviolet;
-}
-
 .add-expense-section {
-  background-color: white;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100px;
-  box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
+  background-color: white;
   border-radius: 0 0 10px 10px;
+  box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  margin: auto;
+  width: 80%;
 }
 
 .add-expense-button {
-  width: 330px;
+  background: #2fc18c;
+  border: 1px solid #2fc18c;
+  border-radius: 5px;
+  color: white;
+  font-family: Epilogue, sans-serif;
+  font-size: 14px;
+  font-weight: 700;
   height: 40px;
   left: 475px;
-  top: 318px;
-  background: #2FC18C;
-  border: 1px solid #2FC18C;
-  border-radius: 5px;
-  font-weight: 700;
-  font-size: 14px;
   line-height: 14px;
   text-align: center;
-  color: #FFFFFF;
-  font-family: Epilogue, sans-serif;
+  top: 318px;
+  width: 330px;
 }
