--- a/src/assets/styles/WalletForm.css
+++ b/src/assets/styles/WalletForm.css
@@ -1,3 +1,8 @@
+.form-section {
+  z-index: 10;
+  position: relative;
+}
+
 .input-section {
   align-items: center;
   background-color: rgb(235, 239, 244);
